# com-mate-converter

./: .gitignore  LICENSE  README.md  cmc.spec  pyproject.toml  version.txt
.github/workflows/: release.yml
com_mate_converter/: __init__.py  __main__.py  i18n.py
com_mate_converter/app/: __init__.py  app.py  dialog.py  file_drop.py  logo.py  progress.py  suggestor.py
com_mate_converter/config/: __init__.py
com_mate_converter/css/: cmc.css
com_mate_converter/locale/zh_CN/LC_MESSAGES/: com-mate-converter.po
com_mate_converter/log/: __init__.py
com_mate_converter/model/: __init__.py  base.py  config.py  format.py  mate.py  menu.py  pmat.py
com_mate_converter/utils/: construct_classes.py
com_mate_converter/work/: __init__.py  binary_replace.py  work_manager.py  work_thread.py
resources/: start_with_wt.bat
resources/config/: ShaderFamilies.json  ShaderNames.json
tests/: __init__.py  performance_test_builder.py  test_mate_parser.py  test_menu_parser.py
tests/resources/: example_1.mate  example_1_corrupted.mate  example_1_error_prop.mate  example_1_untruncated.mate  example_2.mate  example_3.mate  menu_example.menu  menu_example_error.menu  menu_example_untruncated.menu  template.menu  template_NPRMAT_NPRToonV2_Emissiv_Trans_.mate
